Correct sticky social media widgets not being disabled on mobile

--- a/css/src/_widgets.scss
+++ b/css/src/_widgets.scss
@@ -288,6 +288,12 @@
 	text-align: center;
 	margin-bottom: 2 * $grid-margin-gutters;
 
+	@include breakpoint(small) {
+		> .sticky {
+			position: static !important; // sass-lint:disable-line no-important
+		}
+	}
+
 	.medium-card {
 		display: flex;
 		flex-wrap: nowrap;
